meson.build Setup with vcpkg
This setups up meson to build not only with mingw-w64
but also with visual studio as well

Signed-off-by: Zach Bacon <zachbacon@vba-m.com>

--- a/meson.build
+++ b/meson.build
@@ -5,14 +5,54 @@ project('briskplayer', ['c', 'cpp'],
 
 cc = meson.get_compiler('c')
 
-vorbisdep = dependency('vorbis', static : true)
-vorbisfiledep = dependency('vorbisfile', static : true)
-oggdep = dependency('ogg', static : true)
-maddep = dependency('mad', static : true)
-flacdep = dependency('flac', static : true)
-zlibdep = dependency('zlib', static : true)
-taglibdep = dependency('taglib_c', static : true)
-faudiodep = dependency('FAudio', required : false, static : true)
+# Find dependencies with fallback support
+# Try both cmake and pkg-config methods for maximum compatibility
+vorbisdep = dependency('vorbis', static : true, method : 'pkg-config', required : false)
+if not vorbisdep.found()
+    vorbisdep = dependency('vorbis', static : true, method : 'cmake', required : true)
+endif
+
+vorbisfiledep = dependency('vorbisfile', static : true, method : 'pkg-config', required : false)
+if not vorbisfiledep.found()
+    vorbisfiledep = dependency('vorbisfile', static : true, method : 'cmake', required : true)
+endif
+
+oggdep = dependency('ogg', static : true, method : 'pkg-config', required : false)
+if not oggdep.found()
+    oggdep = dependency('ogg', static : true, method : 'cmake', required : true)
+endif
+
+maddep = dependency('mad', static : true, method : 'pkg-config', required : false)
+if not maddep.found()
+    maddep = dependency('mad', static : true, method : 'cmake', required : true)
+endif
+
+flacdep = dependency('flac', static : true, method : 'pkg-config', required : false)
+if not flacdep.found()
+    flacdep = dependency('flac', static : true, method : 'cmake', required : true)
+endif
+
+zlibdep = dependency('zlib', static : true, method : 'pkg-config', required : false)
+if not zlibdep.found()
+    zlibdep = dependency('zlib', static : true, method : 'cmake', required : true)
+endif
+
+# TagLib might be named differently in vcpkg vs other systems
+taglibdep = dependency('taglib_c', static : true, method : 'pkg-config', required : false)
+if not taglibdep.found()
+    taglibdep = dependency('taglib', static : true, method : 'pkg-config', required : false)
+endif
+if not taglibdep.found()
+    taglibdep = dependency('taglib_c', static : true, method : 'cmake', required : false)
+endif
+if not taglibdep.found()
+    taglibdep = dependency('taglib', static : true, method : 'cmake', required : true)
+endif
+
+faudiodep = dependency('FAudio', required : false, static : true, method : 'pkg-config')
+if not faudiodep.found()
+    faudiodep = dependency('FAudio', required : false, static : true, method : 'cmake')
+endif
 winmm = cc.find_library('winmm')
 comctl32 = cc.find_library('comctl32')
 wininet = cc.find_library('wininet')
@@ -22,11 +62,43 @@ propsys = cc.find_library('propsys')
 mfuuid = cc.find_library('mfuuid')
 mfreadwrite = cc.find_library('mfreadwrite')
 
-wrc = find_program('windres')
-res_ext = '.o'
-wrc_generator = generator(wrc,
-output    : [ '@BASENAME@' + res_ext ],
-arguments : [ '-i', '@INPUT@', '-o', '@OUTPUT@' ])
+# Resource compiler detection - support both MinGW and Visual Studio
+compiler_id = cc.get_id()
+message('Detected C compiler: ' + compiler_id)
+
+if compiler_id == 'msvc'
+    # Visual Studio - use rc.exe
+    wrc = find_program('rc', required: true)
+    res_ext = '.res'
+    wrc_generator = generator(wrc,
+    output    : [ '@BASENAME@' + res_ext ],
+    arguments : [ '/fo', '@OUTPUT@', '@INPUT@' ])
+    message('Using Visual Studio resource compiler (rc.exe)')
+elif compiler_id == 'gcc' or compiler_id == 'clang'
+    # MinGW/GCC/Clang - use windres
+    wrc = find_program('windres', required: true)
+    res_ext = '.o'
+    wrc_generator = generator(wrc,
+    output    : [ '@BASENAME@' + res_ext ],
+    arguments : [ '-i', '@INPUT@', '-o', '@OUTPUT@' ])
+    message('Using MinGW/GCC resource compiler (windres)')
+else
+    # Fallback - try windres first, then rc
+    wrc = find_program('windres', 'rc', required: true)
+    if wrc.path().contains('windres')
+        res_ext = '.o'
+        wrc_generator = generator(wrc,
+        output    : [ '@BASENAME@' + res_ext ],
+        arguments : [ '-i', '@INPUT@', '-o', '@OUTPUT@' ])
+        message('Using windres (fallback)')
+    else
+        res_ext = '.res'
+        wrc_generator = generator(wrc,
+        output    : [ '@BASENAME@' + res_ext ],
+        arguments : [ '/fo', '@OUTPUT@', '@INPUT@' ])
+        message('Using rc.exe (fallback)')
+    endif
+endif
 
 briskres = wrc_generator.process('briskplayer.rc')
 
